change insta icon

--- a/nictorys/nictorys/contact.html
+++ b/nictorys/nictorys/contact.html
@@ -205,7 +205,7 @@
                   <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=61581259394743#"><i class="ti-facebook"></i></a></li>
                     <li><a href="https://www.youtube.com/@Colour_vision"><i class="fab fa-youtube"></i></a></li>
-                    <li><a href="https://www.instagram.com/shadesbycolourvision/"><i class="ti-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/shadesbycolourvision/"><i class="fab fa-instagram"></i></a></li>
                     <li><a href="https://wa.me/916293936393" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                   </ul>
                 </div>
