--- a/nictorys/nictorys/services.html
+++ b/nictorys/nictorys/services.html
@@ -245,7 +245,7 @@ Our recommendations cover colours, finishes, and textures for a harmonious space
               <ul>
                 <li><a href="https://www.facebook.com/profile.php?id=61581259394743#"><i class="ti-facebook"></i></a></li>
                     <li><a href="https://www.youtube.com/@Colour_vision"><i class="fab fa-youtube"></i></a></li>
-                    <li><a href="https://www.instagram.com/shadesbycolourvision/"><i class="ti-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/shadesbycolourvision/"><i class="fab fa-instagram"></i></a></li>
                     <li><a href="https://wa.me/916293936393" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
               </ul>
             </div>
