active colour fix

--- a/nictorys/nictorys/index.html
+++ b/nictorys/nictorys/index.html
@@ -694,6 +694,7 @@
 
   <!-- Custom script for this template -->
   <script src="assets/js/script.js"></script>
+ <script>
   // Get the current path
   let path = window.location.pathname;
 
