--- a/nictorys/nictorys/about.html
+++ b/nictorys/nictorys/about.html
@@ -664,7 +664,7 @@
                 <div class="social">
                   <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=61581259394743#"><i
-                          class="ti-facebook"></i></a></li>
+                          class="fab fa-facebook"></i></a></li>
                     <li><a href="https://www.youtube.com/@Colour_vision"><i class="fab fa-youtube"></i></a></li>
                     <li><a href="https://www.instagram.com/shadesbycolourvision/"><i class="fab fa-instagram"></i></a></li>
                     <li><a href="https://wa.me/916293936393" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
