fix footer responsiveness

--- a/nictorys/nictorys/index.html
+++ b/nictorys/nictorys/index.html
@@ -73,7 +73,7 @@
                 rel="noopener">
                 <i class="fab fa-whatsapp"></i>
               </a>
-              
+
 
             </ul>
           </div>
@@ -411,8 +411,10 @@
                 <div class="details">
                   <i class="fi flaticon-paint-roller"></i>
                   <h3>Layering Work</h3>
-                  <p>Get flawless, professional-grade finishes every time.
-                    Our expert layering techniques ensure even coverage and smooth textures.</p>
+                  <p>
+                    Layering for SVG Paint Previews allows each part of a building or room to be organized into separate
+                    layers, letting customers visualize and apply different colors to specific areas before finalizing
+                    their choice.</p>
                 </div>
               </div>
 
