--- a/nictorys/nictorys/services.html
+++ b/nictorys/nictorys/services.html
@@ -175,9 +175,7 @@ See realistic previews of colours, textures, and finishes in your space.
             <div class="details">
               <i class="fi flaticon-paint-roller"></i>
               <h3>Layering Work</h3>
-              <p>
-                Our experts apply each coat precisely for flawless, even coverage.
-Layering enhances colour vibrancy and ensures a smooth, long-lasting finish.
+              <p>SVG paint layering organizes each section of a building or room into distinct layers, enabling customers to preview and experiment with different colors on specific areas before making a final decision.
 
               </p>
             </div>
